fix header 02 menu button spacing

--- a/src/header/_header-appsembler-02.scss
+++ b/src/header/_header-appsembler-02.scss
@@ -172,7 +172,7 @@
     background: none;
     border: none;
     outline: none;
-    width: $nav-toggle-bar-width;
+    width: $header-font-size*4;
     height: $nav-toggle-bar-width !important;
     padding: 0;
     position: relative;
